correct gap in cards

--- a/src/index.css
+++ b/src/index.css
@@ -749,6 +749,14 @@ body {
   gap: 0.75rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
